k8-setup/producer-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-consumer
  namespace: platform
  labels:
    app: producer-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer-consumer
  template:
    metadata:
      labels:
        app: producer-consumer
    spec:
      restartPolicy: Always
      containers:
        - name: producer-consumer
          image: frozenwolf2003/producer_consumer:latest
          command: ["/bin/sh", "-c"]
          args:
            - |
              set -e
              apt-get update && apt-get install -y --no-install-recommends git
              git clone https://github.com/FrozenWolf-Cyber/crypto-mlops /app/repo
              cd /app/repo/utils/producer_consumer
              python -m job_handler
          volumeMounts:
            - name: custom-worker-shared
              mountPath: /opt/airflow/custom_persistent_shared
      volumes:
        - name: custom-worker-shared
          persistentVolumeClaim:
            claimName: shared-pvc
