k8-setup/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  type: NodePort
  selector:
    app: kafka
  ports:
    - port: 9092
      nodePort: 30092
