k8-setup/ml-flow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: python:3.11-slim
          command: ["bash", "-c"]
          args:
            - |
              pip install --no-cache-dir mlflow[auth] psycopg2-binary boto3 gunicorn &&
              mlflow server \
                --backend-store-uri $DATABASE_URL \
                --default-artifact-root s3://mlops/ml-flow \
                --host 0.0.0.0 \
                --port 5000 \
                --app-name basic-auth  --gunicorn-opts "--workers 0"

              
          ports:
            - containerPort: 5000
          # livenessProbe:
          #   httpGet:
          #     path: /api/2.0/mlflow/experiments/list
          #     port: 5000
          #   initialDelaySeconds: 300
          #   periodSeconds: 20
          # readinessProbe:
          #   httpGet:
          #     path: /api/2.0/mlflow/experiments/list
          #     port: 5000
          #   initialDelaySeconds: 300
          #   periodSeconds: 10
          volumeMounts:
            - name: shared
              mountPath: /mlflow
      volumes:
        - name: shared
          persistentVolumeClaim:
            claimName: shared-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: platform
spec:
  type: NodePort 
  selector:
    app: mlflow
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30050
