k8-setup/promotheus.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "10254"
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.47.0
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--enable-metrics=true"
          ports:
            - name: prometheus
              containerPort: 10254
          # livenessProbe:
          #   httpGet:
          #     path: /-/healthy
          #     port: 9090
          #   initialDelaySeconds: 30
          #   periodSeconds: 20
          # readinessProbe:
          #   httpGet:
          #     path: /-/ready
          #     port: 9090
          #   initialDelaySeconds: 15
          #   periodSeconds: 10
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus
            - name: shared
              mountPath: /prometheus   # Prometheus TSDB on shared PVC
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
        - name: shared
          persistentVolumeClaim:
            claimName: shared-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: platform
spec:
  type: NodePort 
  selector:
    app: prometheus
  ports:
    - name: prometheus
      port: 10254
      targetPort: 10254
      nodePort: 31000
