k8-setup/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-api-ingress
  namespace: platform
spec:
  rules:
    - host: airflow.gokuladethya.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-api-server
                port:
                  number: 8080



---
apiVersion: v1
kind: Service
metadata:
  name: airflow-api-server
  namespace: platform
spec:
  selector:
    component: api-server
    release: airflow
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
